--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 
 <body>
     <header>
-        <h1>Adventure</h1>
+        <h1>Expedition</h1>
     </header>
+
+    <div class="container">
+        <main>
+
+        </main>
+    </div>
+
+    <footer>
+        Made with ♥ @ Udacity
+    </footer>
     <script src="js/app.js"></script>
 </body>
 
