--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <!-- start of new content -->
     <aside>
-        <h2>About Me</h2>
+        <h2>Hello there! My name is Nikesh Pathak. I am currently studying paschimanchal campus which is under hood of
+            Tribhuwan
+            University.
+        </h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, debitis earum molestias veniam suscipit
             aliquam totam exercitationem tempore neque vitae. Minima, corporis pariatur facere at quo porro beatae
